src/syntax_analysis/expression/tests/snapshots/monkey_interpreter__syntax_analysis__expression__tests__test_syntax_analysis_for_prefix_expression_case2.snap
---
source: src/syntax_analysis/expression/tests/mod.rs
expression: "crate::syntax_analysis::SyntaxAnalysis::from(crate::lexical_analysis::LexicalAnalysis::from(code))"

---
AbstractSyntaxTree {
    abstract_syntax_tree: [
        Expression {
            expression: Prefix {
                prefix_token: Minus,
                right_hand: Integer {
                    integer_token: Integer {
                        literal: "3",
                    },
                },
            },
        },
    ],
    syntax_parsing_errors: [],
}
