src/syntax_analysis/expression/tests/snapshots/monkey_interpreter__syntax_analysis__expression__tests__test_syntax_analysis_for_string_expressions_case3.snap
---
source: src/syntax_analysis/expression/tests/mod.rs
expression: "crate::syntax_analysis::SyntaxAnalysis::from(crate::lexical_analysis::LexicalAnalysis::from(code).unwrap())"
---
Ok(
    [
        Statement {
            statement: Let {
                identifier: "name",
                expression: Infix {
                    left_hand: String {
                        literal: "firstName",
                    },
                    operator: Plus,
                    right_hand: String {
                        literal: "lastName",
                    },
                },
            },
        },
    ],
)
